--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "chart sys",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --config ./build/webpack.prod.js",
-    "dev": "webpack-dev-server --open --config ./build/webpack.dev.js"
+    "build": "webpack --config ./build/webpack.prod.js --mode production",
+    "dev": "webpack-dev-server --open --config ./build/webpack.dev.js --mode development"
   },
   "author": "george",
   "license": "ISC",
@@ -18,11 +18,16 @@
     "clean-webpack-plugin": "^2.0.1",
     "css-loader": "^2.1.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^3.0.1",
+    "glob": "^7.1.3",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.11.0",
     "postcss-loader": "^3.0.0",
+    "purify-css": "^1.2.5",
+    "purifycss-webpack": "^0.7.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
+    "url-loader": "^1.1.2",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.3.1",
